--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\Users\AHOR ISAAC\Documents\ico files\physics_96px.ico,0
+IconResource=C:\Users\AHOR ISAAC\Documents\ico-3d\Screenshot 2022-12-30 11.07.08.ico,0
 [ViewState]
 Mode=
 Vid=
